fix image overflow

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -26,7 +26,7 @@
   --toggler-focus: hsl(240, 75%, 50%);
   --toggler-foreground: hsl(60, 75%, 75%);
   --toggler-background: hsl(60, 75%, 45%);
-  --color-grayscale4: hsl(0,0%,90%);
+  --color-grayscale4: hsl(0, 0%, 90%);
 }
 
 /* Dark" template */
@@ -38,7 +38,7 @@
   --toggler-focus: hsl(60, 75%, 50%);
   --toggler-foreground: hsl(240, 75%, 75%);
   --toggler-background: hsl(240, 75%, 45%);
-  --color-grayscale4: hsl(0,0%,15%);
+  --color-grayscale4: hsl(0, 0%, 15%);
 }
 
 *,
@@ -84,6 +84,7 @@ body {
    Base card styles
 -------------------------------------- */
 .card {
+  cursor: pointer;
   /* --------------------------------------
      Variants (portrait, half-landscape)
   -------------------------------------- */
@@ -121,6 +122,7 @@ body {
 .card--landscape .card--search, .card--half-landscape .card--search {
   height: 100%;
   display: grid;
+  gap: 1rem;
 }
 .card--landscape .card--search .card__info, .card--half-landscape .card--search .card__info {
   display: grid;
@@ -132,15 +134,16 @@ body {
      object-fit: cover;
 }
 .card--landscape .card--search {
-  grid-template-rows: 30% 70%;
+  grid-template-rows: auto 1fr;
 }
 .card--half-landscape .card--search {
-  grid-template-rows: 30% 70%;
+  grid-template-rows: auto 1fr;
 }
 .card--portrait .card--search {
   height: 100%;
   display: grid;
-  grid-template-rows: 15% 85%;
+  grid-template-rows: auto 1fr;
+  gap: 1rem;
 }
 .card--portrait .card--search .card__info {
   display: grid;
@@ -154,7 +157,7 @@ body {
 }
 .card--portrait-content.selected {
   max-height: 110rem;
-  min-height: 90rem;
+  height: 100%;
   display: flex;
   flex-direction: column;
   gap: 3rem;
@@ -260,7 +263,7 @@ body {
 }
 .card--landscape-content.selected {
   max-height: 110rem;
-  min-height: 90rem;
+  height: 100%;
   display: flex;
   flex-direction: column;
   gap: 3rem;
@@ -273,7 +276,7 @@ body {
 .card--landscape-content.selected .card__info-title {
   font-weight: 500;
   letter-spacing: 3px;
-  font-size: 2rem;
+  font-size: 1.6rem;
   position: relative;
 }
 .card--landscape-content.selected .card__info-title::before {
@@ -379,22 +382,6 @@ body {
 .theme-toggler__checkbox-label {
   display: flex;
 }
-.theme-toggler__checkbox {
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-}
-.theme-toggler__checkbox:checked + span::after {
-  transform: translateX(0);
-}
-.theme-toggler__checkbox:focus ~ span, .theme-toggler__checkbox:active ~ span {
-  border-radius: 0.8rem;
-  box-shadow: 0 0 6px 2px var(--toggler-focus);
-}
-.theme-toggler__checkbox:checked:focus ~ span, .theme-toggler__checkbox:checked:active ~ span {
-  border-radius: 0.8rem;
-  box-shadow: 0 0 5px 0 var(--toggler-focus);
-}
 .theme-toggler__icon {
   position: relative;
   display: flex;
@@ -408,8 +395,7 @@ body {
   height: 1.6rem;
   width: 3.6rem;
   border-radius: 0.8rem;
-  background-color: var(--toggler-background);
-  background-image: linear-gradient(to right, rgb(29, 29, 201), rgb(201, 201, 29));
+  border: 1px solid var(--background-color-inverse);
   transition: background-color 200ms ease-in-out;
 }
 .theme-toggler__icon::after {
@@ -418,14 +404,29 @@ body {
   height: 1.4rem;
   width: 1.4rem;
   border-radius: 50%;
-  background-color: var(--toggler-foreground);
+  background-color: var(--background-color-inverse);
   position: absolute;
   left: 0.4rem;
   transform: translateX(100%);
-  transition: background-color 200ms ease-in-out, transform 200ms ease-in-out;
+  transition: background-color 200ms ease-in-out, transform 1000ms linear;
+}
+.theme-toggler__checkbox {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+}
+.theme-toggler__checkbox:checked + span::after {
+  transform: translateX(0px);
+}
+.theme-toggler__checkbox:focus ~ span, .theme-toggler__checkbox:active ~ span {
+  border-radius: 0.8rem;
+}
+.theme-toggler__checkbox:checked:focus ~ span, .theme-toggler__checkbox:checked:active ~ span {
+  border-radius: 0.8rem;
 }
 
 .left-wall {
+  height: 100vh;
   flex-basis: 35%;
   display: flex;
   flex-direction: column;
@@ -445,9 +446,9 @@ body {
 .right-wall {
   z-index: 1;
   flex: 1;
-  box-shadow: -1px -5px 5px rgba(0, 0, 0, 0.5);
+  box-shadow: -1px -5px 5px hsla(var(--background-color-inverse), 0.5);
   padding: 5rem 5rem 2rem;
-  height: 100%;
+  height: 100vh;
 }
 
 .search-bar {
@@ -581,7 +582,7 @@ body {
   padding-left: 1rem;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-auto-rows: 20vh;
+  grid-auto-rows: 25vh;
   grid-auto-flow: row dense;
   grid-gap: 1rem;
   overflow-y: scroll;
